Voetballer uitgebreid met Team en controles
